Nov 18th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Changed version to snmptt_1.2beta1

Sept 23rd, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Added a simple check to see if the trap file being processed is a
  valid file.  If it is not, the file is skipped and not deleted.

Sept 15th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Added snmptt.ini options date_format, time_format, date_time_format,
  date_time_format_sql and stat_time_format_sql to allow the output format 
  for $x and $X substitution variables, and the format of the date/time for
  text logs and SQL to be changed using strftime() variables.  This allows 
  for proper date/time data types to be used in SQL databases.

June 18th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Prevent logging to syslog and event log when running SNMPTT with
  the --time option.  Thanks to Stefan Mohr.
- Fixed a bug under Windows where SNMPTT was trying to log to syslog instead of
  the event log.  Thanks to Roger Lindholm.
- Add threads (ithreads) support for EXEC.  When enabled, EXEC commands will 
  launch in a thread to allow SNMPTT to continue processing other traps.  
  Added snmptt.ini options threads_enable and threads_max.

May 13th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Moved unknown_trap_exec to Exec section in snmptt.ini.  Patch
  1476071.  Thanks to George Kourvoulis.

Mar 23rd, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Added MATCH support for bitwise AND

Mar 13th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Fix a bug where snmpttconvertmib does not handle ARGUMENTS lines
  that have $1, $2 etc instead of %0, %1.  Thanks to Todd A. Green.
  Bug 1438394.

Mar 12th, 2006: Alex Burger <alex_b@users.sourceforge.net>
- Move all SQL update code to subroutines (mysql_update etc).
- Added logging of trap statistics to SQL table.  Added *table_statistics
  snmptt.ini variable to define the table to be used.